--- a/lib_qrcode/src/main/res/values-zh/strings.xml
+++ b/lib_qrcode/src/main/res/values-zh/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="cancel">取消</string>
-    <string name="rotation">旋转</string>
-    <string name="confirm">确定</string>
+    <string name="crop_cancel">取消</string>
+    <string name="crop_rotation">旋转</string>
+    <string name="crop_confirm">确定</string>
 </resources>
