--- a/lib_qrcode/src/main/res/values/strings.xml
+++ b/lib_qrcode/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="cancel">cancel</string>
-    <string name="rotation">rotation</string>
-    <string name="confirm">confirm</string>
+    <string name="crop_cancel">cancel</string>
+    <string name="crop_rotation">rotation</string>
+    <string name="crop_confirm">confirm</string>
 </resources>
